--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>rsql-parser</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.perplexhub</groupId>
+            <artifactId>rsql-jpa-spring-boot-starter</artifactId>
+            <version>6.0.32</version>
+        </dependency>
 
         <!-- ModelMapper for DTO/entity mapping -->
         <dependency>
