feat(security): enable DEBUG logging for Spring Security

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -35,6 +35,9 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+# Grace: Enabled logging for Spring Security to see logs about authentication and filter chain
+logging.level.org.springframework.security=DEBUG
+
 # CORS Configuration
 management.endpoints.web.cors.allowed-origins=http://localhost:3000,http://localhost:5173
 management.endpoints.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
