--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,6 +1,10 @@
 name: Maven Build (With Tests)
 
 on:
+  push:
+    branches: [ "release" ]  # Triggers on push to release branch
+    paths:
+      - 'backend/**' # Only triggers when backend files change
   pull_request:
     branches: [ "release" ]  # Triggers on pull requests to release branch
     paths:
@@ -38,3 +42,21 @@ jobs:
         with:
           name: application-jar
           path: backend/target/*.jar
+
+      - name: Set up Docker Buildx
+        if: github.event_name == 'push'
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build and Push Docker Image
+        if: github.event_name == 'push'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/backend:latest
